Cambios recomendados por github copilot